--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.22",
     "@angular/animations": "9.0.5",
     "@angular/cdk": "^10.1.3",
     "@angular/common": "9.0.5",
@@ -25,16 +26,32 @@
     "@angular/platform-browser-dynamic": "9.0.5",
     "@angular/router": "9.0.5",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "@types/highcharts": "^7.0.0",
+    "angular-highcharts": "^12.0.0",
     "angularx-social-login": "^3.2.1",
     "bootstrap": "4.1.3",
-    "chart.js": "2.7.3",
+    "chart.js": "^2.9.4",
+    "chartjs-plugin-annotation": "^1.0.2",
+    "chartjs-plugin-zoom": "^1.1.1",
     "clipboard": "2.0.4",
     "core-js": "3.6.4",
+    "hammerjs": "^2.0.8",
+    "highcharts": "^9.2.2",
+    "igniteui-angular": "^9.1.28",
+    "igniteui-angular-charts": "^12.1.1",
+    "igniteui-angular-core": "^12.1.1",
+    "jszip": "^3.5.0",
+    "minireset.css": "~0.0.4",
+    "ng2-charts": "^2.4.3",
     "ngx-clipboard": "13.0.0",
     "ngx-countdown": "^10.0.0",
     "ngx-toastr": "12.0.0",
     "nouislider": "13.1.1",
+    "resize-observer-polyfill": "^1.5.1",
     "rxjs": "6.5.4",
+    "rxjs-compat": "^6.6.7",
+    "sweetalert2": "^11.1.7",
+    "web-animations-js": "^2.3.2",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
@@ -42,6 +59,8 @@
     "@angular/cli": "9.0.5",
     "@angular/compiler-cli": "9.0.5",
     "@angular/language-service": "9.0.5",
+    "@igniteui/angular-schematics": "~9.1.510",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "3.5.8",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "13.7.7",
